2A/05_Projet_GL/src/test/deca/context/invalid/complet/06_decl_field_en_decl_method.deca
// Description :
//     redefinition du champ en methode 
// Resultats :
//    ligne 14 : une rédefinition inacceptable du x en tant que methode 
// Historique :
//  cree le 16/01/2024

class A {
    int x ; 
}

class B extends A {

    int x() {
    
    }
}